Redirect for foundation
Also includes a fix for nav bar on join page.

--- a/website/static/join.html
+++ b/website/static/join.html
@@ -87,7 +87,7 @@
               <a class="nav-link" aria-current="page" href="community.html">Community</a>
             </li>
             <li class="nav-item">
-              <a class="nav-item" href="blog">Blog</a>
+              <a class="nav-link" aria-current="page" href="blog">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="docs/current" target="_blank">Docs</a>
