add banner for prestocon day 2023

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -120,15 +120,15 @@
   </div>
 </div>
 
-<section style="background:#FFA601;position:relative;">
+<section style="background: rgb(87,157,252);background: linear-gradient(90deg, rgba(87,157,252,1) 0%, rgba(56,221,253,1) 100%);position:relative;">
   <div style="position:absolute;inset: 0 75% 0 0;background:url('img/icon-presto-dots-color.svg') right center no-repeat transparent;background-size:cover;filter:brightness(0) invert(1);opacity:0.25"></div>
   <div class="container-fluid wrapper py-3">
     <div class="row" style="max-width:800px;margin:0 auto; text-align:center;">
-      <div class="col-12 col-md-6 mx-auto text-white text-center" style="font-size:1.2rem;" ><img src="img/logo-prestocon-white.svg" alt="prestocon" style="max-width:300px;"  /><br/>
+      <div class="col-12 col-md-6 mx-auto text-white text-center" style="font-size:1.2rem;" ><img src="img/logo-prestoconday-white.svg" alt="prestocon day" style="max-width:300px;"  /><br/>
         </div>
         <div class="col-12 col-md-6 mx-auto text-white text-center" style="font-size:1.2rem;" >
-          <div><b>On-Demand Session Videos</b></div>
-        <a href="videos.html" class="btn btn-sm btn-light  mt-3" >View Now</a>
+          <div><b>Virtual Event | June 7, 2023</b></div>
+        <a href="https://events.linuxfoundation.org/prestocon-day/" class="btn btn-sm btn-light  mt-2" target="_blank" >Register Now</a>
       </div>
     </div>
   </div>
