Add youtube video link of 'what is Presto?'

--- a/website/static/what-is-presto.html
+++ b/website/static/what-is-presto.html
@@ -108,7 +108,7 @@
   <section class="bg-silver-gradient-to-white">
     <div class="container-fluid wrapper pb-5">
       <div class="row align-items-center pt-5  sequential-fadeup">
-        <h1 class="py-2 text-center revealed">What is Presto?</h1>
+        <h1 class="py-2 text-center revealed"><a href="https://www.youtube.com/watch?v=BGqIkiUtKHY" target="_blank">What is Presto?</a></h1>
         <h2 class="w-75 mx-auto text-center revealed">Fast and reliable SQL query engine for data analytics and the open
           lakehouse</h2>
       </div>
