--- a/website/static/what-is-presto.html
+++ b/website/static/what-is-presto.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/custom.css" type="text/css" />
   <link rel="stylesheet" href="css/effects.css" type="text/css" />
+  <link rel="stylesheet" href="css/ytlightbox.css" type="text/css" />
+  <link rel="stylesheet" href="css/presentations.css" type="text/css" />
   <link rel="canonical" href="https://prestodb.io/what-is-presto.html" />
   <meta name="viewport" content="width=device-width">
   <meta name="robots" content="follow, index"/>
@@ -120,6 +122,7 @@
       <h5 class="my-5 mx-auto text-center" style="max-width: 960px;">For data engineers who struggle with managing
         multiple query languages and interfaces to siloed databases and storage, Presto is the fast and reliable
         engine that provides one simple ANSI SQL interface for all your data analytics and your open lakehouse.</h5>
+        <div style="margin: 0px auto 1em; max-width: 640px;"><a href="https://www.youtube.com/watch?v=BGqIkiUtKHY" target="_blank" class="ytlightbox" data-aspect="16x9"><div class="aspect16x9 presentationVideoThumb" style="display:inline-block;box-shadow:0 0 5px rgba(0,0,0,0.15);"><img src="img/videos/poster-eli5-presto.jpg" alt="Presto Tech Talk: Intro to Presto and Superset video" class=""></div></a></div>
       <div class="d-sm-flex flex-wrap sequential-fadein py-3 pb-5" style="margin: 0px auto; max-width: 900px;">
         <h5 class="text-center flex-fill p-2 revealed"><a href="#key_innovation"><b>Key Innovation</b></a></h5>
         <h5 class="text-center flex-fill p-2 revealed"><a href="#why_presto"><b>Why Presto?</b></a></h5>
@@ -356,7 +359,7 @@
     </div>
   </div>
 </footer>
-
+  <script async src="static/js/ytlightbox.js"></script>
   <script async src="static/js/effects.js"></script>
 </body>
 
