Add speaker logos to prestocon day banner on home

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -123,12 +123,23 @@
 <section style="background: rgb(87,157,252);background: linear-gradient(90deg, rgba(87,157,252,1) 0%, rgba(56,221,253,1) 100%);position:relative;">
   <div style="position:absolute;inset: 0 75% 0 0;background:url('img/icon-presto-dots-color.svg') right center no-repeat transparent;background-size:cover;filter:brightness(0) invert(1);opacity:0.25"></div>
   <div class="container-fluid wrapper py-3">
-    <div class="row" style="max-width:800px;margin:0 auto; text-align:center;">
+    <div class="row text-white" style="max-width:800px;margin:0 auto; text-align:center;">
       <div class="col-12 col-md-6 mx-auto text-white text-center" style="font-size:1.2rem;" ><img src="img/logo-prestoconday-white.svg" alt="prestocon day" style="max-width:300px;"  /><br/>
         </div>
         <div class="col-12 col-md-6 mx-auto text-white text-center" style="font-size:1.2rem;" >
           <div><b>Virtual Event | June 7, 2023</b></div>
-        <a href="https://events.linuxfoundation.org/prestocon-day/" class="btn btn-sm btn-light  mt-2" target="_blank" >Register Now</a>
+        <a href="https://events.linuxfoundation.org/prestocon-day/" class="btn btn-sm btn-light  mt-2" target="_blank" >Free Registration</a>
+      </div>
+      <div class="my-1">Speakers Include:</div>
+    </div>
+    <div class="row text-white" style="max-width:1200px;margin:0 auto; text-align:center;"></div>
+      <div class="row mx-auto text-white text-center d-flex align-items-center">
+        <div class="col-6 col-md-2 pb-3"><img src="img/logo-adobe-white.png" alt="Adobe" style="width:90%;max-width:200px;" /></div>
+        <div class="col-6 col-md-2 pb-3"><img src="img/logo-bolt-white.png" alt="Bolt" style="width:90%;max-width:100px;" /></div>
+        <div class="col-6 col-md-2 pb-3"><img src="img/logo-tiktok-white.png" alt="TikTok" style="width:90%;max-width:200px;" /></div>
+        <div class="col-6 col-md-2 pb-3"><img src="img/logo-hpe-white.png" alt="Hewlett Packard Enterprise" style="width:90%;margin-left:20px;max-width:120px" /></div>
+        <div class="col-6 col-md-2 pb-3"><img src="img/presto-users/logo-uber.svg" alt="Uber" style="width:90%;filter:brightness(0) invert(1);max-width:120px;" /></div>
+        <div class="col-6 col-md-2 pb-3"><img src="img/presto-users/logo-alibaba.svg" alt="Alibaba" style="width:90%;filter:brightness(0) invert(1);max-width:120px;" /></div>
       </div>
     </div>
   </div>
