--- a/website/static/getting-started.html
+++ b/website/static/getting-started.html
@@ -144,7 +144,7 @@
     </script>
     <div class="container my-5">
       <div class="row">
-        <div class="col card-group" id="getStartedCards">
+        <div class="col card-group card-group-2-per-row" id="getStartedCards">
           <script type="module">
             import('./data/GetStarted_Cards.js').then(
               (data) => {
