Added Hubspot script to head

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -21,7 +21,9 @@
   <meta name="twitter:site" content="@@securelink" />
   <link rel="icon" type="image/x-icon" href="img/icon-presto-dots-color.svg">
   <script async src="static/js/bootstrap.bundle.min.js"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/39785153.js"></script>
+  <!-- End of HubSpot Embed Code -->
   <script>
   window.dataLayer = window.dataLayer || [];
 
