--- a/website/static/getting-started.html
+++ b/website/static/getting-started.html
@@ -20,7 +20,9 @@
   <meta name="twitter:description" content="Get started with a local installation of Presto, or try the SaaS version. Find additional learning resources or get help on how to install and run PrestoDB." />
   <link rel="icon" type="image/x-icon" href="img/icon-presto-dots-color.svg">
   <script async src="static/js/bootstrap.bundle.min.js"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/39785153.js"></script>
+  <!-- End of HubSpot Embed Code -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
   <!--[if (lt IE 9)]><script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.helper.ie8.js"></script><![endif]-->
