--- a/website/static/videos.html
+++ b/website/static/videos.html
@@ -22,7 +22,9 @@
   <meta name="twitter:description" content="Recordings of Presto meetups and sessions from previous Prestocon events, as well as webinars and other video resources. Keep up with the latest trends." />
   <link rel="icon" type="image/x-icon" href="img/icon-presto-dots-color.svg">
     <script async src="static/js/bootstrap.bundle.min.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/39785153.js"></script>
+  <!-- End of HubSpot Embed Code -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <!--[if (lt IE 9)]><script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.helper.ie8.js"></script><![endif]-->
