Add newsletter page and form
Added newsletter page and form to getting-started page Preview at https://prestodb.fosforus.com/getting-started.html

--- a/website/static/community.html
+++ b/website/static/community.html
@@ -79,9 +79,11 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="what-is-presto.html">What is Presto?</a></li>
-                                                <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
-                                <li><a class="dropdown-item" href="videos.html">Videos</a></li>
                                 <li><a class="dropdown-item" href="powered-by-presto.html">Powered By Presto</a></li>
+                                <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
+                                <li><a class="dropdown-item" href="videos.html">Videos</a></li>
+                                <li><a class="dropdown-item" href="newsletter.html">Newsletter</a></li>
+                                
                               </ul>
                         </li>
                         <li class="nav-item">
