--- a/website/static/tutorials.html
+++ b/website/static/tutorials.html
@@ -64,6 +64,7 @@
                 <li><a class="dropdown-item" href="powered-by-presto.html">Powered By Presto</a></li>
                 <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
                 <li><a class="dropdown-item" href="videos.html">Videos</a></li>
+                <li><a class="dropdown-item" href="newsletter.html">Newsletter</a></li>
               </ul>
             </li>
             <li class="nav-item">
