Add News Page to site
Preview at: https://prestodb.fosforus.com/news.html

--- a/website/static/community.html
+++ b/website/static/community.html
@@ -185,8 +185,8 @@
                     src="img/icon-forum-dark.svg" alt="forums" style="max-width: 1.5em;"> Blog About Your Use Case</a>
 
         </div>
-        <div style="text-align:center;max-width:410px;margin:0 auto;>
-  <a href="https://forms.gle/LPB7V9XLpZmnoEam8" class="btn btn-lg btn-outline-dark m-1 flex-fill equal-widths-50 text-nowrap revealed" target="_blank">Fill out the Community Survey*</a><br/>
+        <div style="text-align:center;max-width:410px;margin:0 auto;">
+  <a href="https://forms.gle/LPB7V9XLpZmnoEam8" class="btn btn-lg btn-outline-dark m-1 flex-fill text-nowrap " target="_blank">Fill out the Community Survey*</a><br/>
 we'll send you a swag pack as a thanks!
 </div>
     </div>
@@ -386,6 +386,7 @@ we'll send you a swag pack as a thanks!
                   </path>
                 </svg></a></li>
             <li class="footer__item"><a class="footer__link-item" href="join.html">Presto Foundation</a></li>
+<li class="footer__item"><a class="footer__link-item" href="news.html">News & Press</a></li>
           </ul>
         </div>
       </div>
