--- a/website/static/newsletter.html
+++ b/website/static/newsletter.html
@@ -12,7 +12,7 @@
   <meta name="robots" content="follow, index"/>
   <meta name="description" content="Subscribe to get the latest blogs, events, and news from the open source Presto community."/>
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Launch Presto: Local download, JDBC, Docker or on AWS Cloud">
+  <meta property="og:title" content="Subscribe to the Presto Community Newsletter">
   <meta property="og:description" content="Subscribe to get the latest blogs, events, and news from the open source Presto community.">
   <meta property="og:image" content="static/presto-og.png">
   <meta name="twitter:card" content="static/presto-og.png" />
@@ -83,7 +83,6 @@
                 <li><a class="dropdown-item" href="powered-by-presto.html">Powered By Presto</a></li>
                 <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
                 <li><a class="dropdown-item" href="videos.html">Videos</a></li>
-                <li><a class="dropdown-item" href="newsletter.html">Newsletter</a></li>
                 <li><a class="dropdown-item" href="newsletter.html">Newsletter</a></li>
               </ul>
             </li>
@@ -196,6 +195,7 @@
                   </path>
                 </svg></a></li>
             <li class="footer__item"><a class="footer__link-item" href="join.html">Presto Foundation</a></li>
+<li class="footer__item"><a class="footer__link-item" href="news.html">News & Press</a></li>
           </ul>
         </div>
       </div>
