--- a/website/static/what-is-presto.html
+++ b/website/static/what-is-presto.html
@@ -348,6 +348,7 @@
                 </path>
               </svg></a></li>
           <li class="footer__item"><a class="footer__link-item" href="join.html">Presto Foundation</a></li>
+<li class="footer__item"><a class="footer__link-item" href="news.html">News & Press</a></li>
         </ul>
       </div>
     </div>
