added meetup banner
also fixed newsletter canonical url preview at: https://prestodb.fosforus.com/

--- a/website/static/newsletter.html
+++ b/website/static/newsletter.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/custom.css" type="text/css" />
   <link rel="stylesheet" href="css/effects.css" type="text/css" />
-  <link rel="canonical" href="https://prestodb.io/getting-started.html" />
+  <link rel="canonical" href="https://prestodb.io/newsletter.html" />
   <meta name="viewport" content="width=device-width">
   <meta name="robots" content="follow, index"/>
   <meta name="description" content="Subscribe to get the latest blogs, events, and news from the open source Presto community."/>
