--- a/website/static/index.html
+++ b/website/static/index.html
@@ -123,6 +123,13 @@
   </div>
 </div>
 
+<div class="container-fluid py-3 bg-dark text-light">
+  <div class="row wrapper">
+    <div class="col-12 text-center"><img
+      src="img/logo-meetup-color.svg" alt="meetup" style="max-width:120px;margin-right:10px;" class="d-block d-md-inline-block mx-auto mx-md-2" /> <a href="https://www.meetup.com/prestodb/events/294665712/" title="RSVP" target="_blank" class="text-light" >RSVP to Virtual Presto Tech Talk</a> <span class="d-none d-md-inline"> | </span><span class="d-block d-md-inline">July 26 at 10am PT / 1pm ET</span></div>
+  </div>
+</div>
+
 <div class="container-fluid wrapper pb-5">
   <div class="my-5 text-center">
     <div class="sequential-fadeup">
