--- a/website/static/community.html
+++ b/website/static/community.html
@@ -119,9 +119,7 @@
                 <h5 class="" style="max-width: 700px;"><b><span  id="starcount"></span>K</b> stars and growing. There are many ways to get started with the community.
                     The best place to start is by joining our Slack channel where you can meet other Presto engineers
                     and&nbsp;users.</h5>
-                <div class=""><a href="https://communityinviter.com/apps/prestodb/prestodb" target="_blank"
-                        class="btn btn-red btn-xlg my-2"><img src="img/icon-slack-white.svg" alt="slack"
-                            style="max-width: 1.5rem;"> Join Our Slack</a></div>
+                <div class=""><a href="https://communityinviter.com/apps/prestodb/prestodb" target="_blank" class="btn btn-red btn me-2 my-2"><img src="img/icon-slack-white.svg"  alt="slack" style="max-width: 1.5rem;"> <b>Join Our Slack</b></a><a href="/events/community-office-hours.html" class="btn btn-outline-dark btn-md-xlg me-2 my-2">Monthly Virtual Office Hours &rsaquo;</a></div>
                 
             </div>
         </div>
