Update home banner
Also fix links on events/community-office-hours page, and add redirect for /events

Preview at: https://prestodb.fosforus.com/

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -125,8 +125,7 @@
 
 <div class="container-fluid py-3 bg-dark text-light">
   <div class="row wrapper">
-    <div class="col-12 text-center"><img
-      src="img/logo-meetup-color.svg" alt="meetup" style="max-width:120px;margin-right:10px;" class="d-block d-md-inline-block mx-auto mx-md-2" /> <a href="https://www.meetup.com/prestodb/events/294665712/" title="RSVP" target="_blank" class="text-light" >RSVP to Virtual Presto Tech Talk</a> <span class="d-none d-md-inline"> | </span><span class="d-block d-md-inline">July 26 at 10am PT / 1pm ET</span></div>
+    <div class="col-12 text-center"> <a href="/events/community-office-hours.html" title="more info.."  class="text-light" ><b>Join the next Presto Community Office Hours</b><span class="d-none d-md-inline"></a> | </span><span class="d-block d-md-inline"></span>Wed,&nbsp;August&nbsp;2nd at&nbsp;8:30a&nbsp;PT</span></div>
   </div>
 </div>
 
