--- a/website/static/events/community-office-hours.html
+++ b/website/static/events/community-office-hours.html
@@ -62,7 +62,7 @@
   <header class="masthead">
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="."><img src="../img/logo-presto-white.svg" alt="" /></a>
+        <a class="navbar-brand" href="/"><img src="../img/logo-presto-white.svg" alt="" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -89,7 +89,7 @@
               <a class="nav-link" aria-current="page" href="/community.html">Community</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog">Blog</a>
+              <a class="nav-link" href="/blog">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/docs/current" target="_blank">Docs</a>
